Added auth dialogs and color scheme

--- a/player-card/src/index.css
+++ b/player-card/src/index.css
@@ -3,7 +3,89 @@
 
 @custom-variant dark (&:is(.dark *));
 
+/* Nord color theme (https://www.shadcn.studio/) */
+:root {
+  --background: hsl(220 15% 95%);
+  --foreground: hsl(210 10% 20%);
+  --card: hsl(220 15% 95%);
+  --card-foreground: hsl(210 10% 20%);
+  --popover: hsl(220 15% 95%);
+  --popover-foreground: hsl(210 10% 20%);
+  --primary: hsl(204 60% 50%);
+  --primary-foreground: hsl(204 80% 95%);
+  --secondary: hsl(215 15% 80%);
+  --secondary-foreground: hsl(210 25% 20%);
+  --muted: hsl(215 10% 90%);
+  --muted-foreground: hsl(210 15% 40%);
+  --accent: hsl(215 10% 90%);
+  --accent-foreground: hsl(210 10% 20%);
+  --destructive: hsl(0 80% 55%);
+  --destructive-foreground: hsl(0 0% 98%);
+  --border: hsl(215 15% 80%);
+  --input: hsl(215 15% 80%);
+  --ring: hsl(204 60% 50%);
+  --radius: hsl(0.5rem);
+  --chart-1: hsl(204 60% 50%);
+  --chart-2: hsl(210 40% 60%);
+  --chart-3: hsl(220 70% 50%);
+  --chart-4: hsl(192 50% 60%);
+  --chart-5: hsl(240 25% 50%);  
+  --sidebar-background: hsl(220 15% 92%);
+  --sidebar-foreground: hsl(210 10% 38%);
+  --sidebar-primary: hsl(204 60% 47%);
+  --sidebar-primary-foreground: hsl(204 80% 100%);
+  --sidebar-accent: hsl(215 10% 87%);
+  --sidebar-accent-foreground: hsl(210 10% 20%);
+  --sidebar-border: hsl(215 15% 77%);
+  --sidebar-ring: hsl(204 60% 47%);
+
+  --radius: 1rem;
+}
+
+/* Nord color theme (https://www.shadcn.studio/) */
+.dark {
+  --background: hsl(220 15% 10%);
+  --foreground: hsl(204 50% 90%);
+  --card: hsl(220 15% 10%);
+  --card-foreground: hsl(204 50% 90%);
+  --popover: hsl(220 15% 10%);
+  --popover-foreground: hsl(204 50% 90%);
+  --primary: hsl(204 60% 50%);
+  --primary-foreground: hsl(204 80% 95%);
+  --secondary: hsl(215 15% 30%);
+  --secondary-foreground: hsl(204 50% 80%);
+  --muted: hsl(215 10% 20%);
+  --muted-foreground: hsl(210 40% 70%);
+  --accent: hsl(215 10% 20%);
+  --accent-foreground: hsl(204 50% 90%);
+  --destructive: hsl(0 80% 50%);
+  --destructive-foreground: hsl(204 90% 95%);
+  --border: hsl(215 15% 30%);
+  --input: hsl(215 15% 30%);
+  --ring: hsl(204 60% 50%);
+  --radius: hsl(0.5rem);
+  --chart-1: hsl(210 50% 40%);
+  --chart-2: hsl(204 80% 50%);
+  --chart-3: hsl(220 60% 50%);
+  --chart-4: hsl(192 40% 50%);
+  --chart-5: hsl(240 25% 60%);
+  --sidebar-background: hsl(220 15% 2%);
+  --sidebar-foreground: hsl(204 50% 50%);
+  --sidebar-primary: hsl(204 60% 42%);
+  --sidebar-primary-foreground: hsl(204 80% 100%);
+  --sidebar-accent: hsl(215 10% 12%);
+  --sidebar-accent-foreground: hsl(204 50% 90%);
+  --sidebar-border: hsl(215 15% 22%);
+  --sidebar-ring: hsl(204 60% 42%);
+
+  --radius: 1rem;
+}
+
 @theme inline {
+  --radius-sm: calc(var(--radius) - 4px);
+  --radius-md: calc(var(--radius) - 2px);
+  --radius-lg: var(--radius);
+  --radius-xl: calc(var(--radius) + 4px);
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --color-card: var(--card);
@@ -19,7 +101,6 @@
   --color-accent: var(--accent);
   --color-accent-foreground: var(--accent-foreground);
   --color-destructive: var(--destructive);
-  --color-destructive-foreground: var(--destructive-foreground);
   --color-border: var(--border);
   --color-input: var(--input);
   --color-ring: var(--ring);
@@ -28,10 +109,6 @@
   --color-chart-3: var(--chart-3);
   --color-chart-4: var(--chart-4);
   --color-chart-5: var(--chart-5);
-  --radius-sm: calc(var(--radius) - 4px);
-  --radius-md: calc(var(--radius) - 2px);
-  --radius-lg: var(--radius);
-  --radius-xl: calc(var(--radius) + 4px);
   --color-sidebar: var(--sidebar);
   --color-sidebar-foreground: var(--sidebar-foreground);
   --color-sidebar-primary: var(--sidebar-primary);
@@ -40,77 +117,8 @@
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
-}
-
-:root {
-  --background: oklch(1 0 0);
-  --foreground: oklch(0.129 0.042 264.695);
-  --card: oklch(1 0 0);
-  --card-foreground: oklch(0.129 0.042 264.695);
-  --popover: oklch(1 0 0);
-  --popover-foreground: oklch(0.129 0.042 264.695);
-  --primary: oklch(0.208 0.042 265.755);
-  --primary-foreground: oklch(0.984 0.003 247.858);
-  --secondary: oklch(0.968 0.007 247.896);
-  --secondary-foreground: oklch(0.208 0.042 265.755);
-  --muted: oklch(0.968 0.007 247.896);
-  --muted-foreground: oklch(0.554 0.046 257.417);
-  --accent: oklch(0.968 0.007 247.896);
-  --accent-foreground: oklch(0.208 0.042 265.755);
-  --destructive: oklch(0.577 0.245 27.325);
-  --destructive-foreground: oklch(0.577 0.245 27.325);
-  --border: oklch(0.929 0.013 255.508);
-  --input: oklch(0.929 0.013 255.508);
-  --ring: oklch(0.704 0.04 256.788);
-  --chart-1: oklch(0.646 0.222 41.116);
-  --chart-2: oklch(0.6 0.118 184.704);
-  --chart-3: oklch(0.398 0.07 227.392);
-  --chart-4: oklch(0.828 0.189 84.429);
-  --chart-5: oklch(0.769 0.188 70.08);
-  --radius: 0.625rem;
-  --sidebar: oklch(0.984 0.003 247.858);
-  --sidebar-foreground: oklch(0.129 0.042 264.695);
-  --sidebar-primary: oklch(0.208 0.042 265.755);
-  --sidebar-primary-foreground: oklch(0.984 0.003 247.858);
-  --sidebar-accent: oklch(0.968 0.007 247.896);
-  --sidebar-accent-foreground: oklch(0.208 0.042 265.755);
-  --sidebar-border: oklch(0.929 0.013 255.508);
-  --sidebar-ring: oklch(0.704 0.04 256.788);
-}
-
-.dark {
-  --background: oklch(0.129 0.042 264.695);
-  --foreground: oklch(0.984 0.003 247.858);
-  --card: oklch(0.129 0.042 264.695);
-  --card-foreground: oklch(0.984 0.003 247.858);
-  --popover: oklch(0.129 0.042 264.695);
-  --popover-foreground: oklch(0.984 0.003 247.858);
-  --primary: oklch(0.984 0.003 247.858);
-  --primary-foreground: oklch(0.208 0.042 265.755);
-  --secondary: oklch(0.279 0.041 260.031);
-  --secondary-foreground: oklch(0.984 0.003 247.858);
-  --muted: oklch(0.279 0.041 260.031);
-  --muted-foreground: oklch(0.704 0.04 256.788);
-  --accent: oklch(0.279 0.041 260.031);
-  --accent-foreground: oklch(0.984 0.003 247.858);
-  --destructive: oklch(0.396 0.141 25.723);
-  --destructive-foreground: oklch(0.637 0.237 25.331);
-  --border: oklch(0.279 0.041 260.031);
-  --input: oklch(0.279 0.041 260.031);
-  --ring: oklch(0.446 0.043 257.281);
-  --chart-1: oklch(0.488 0.243 264.376);
-  --chart-2: oklch(0.696 0.17 162.48);
-  --chart-3: oklch(0.769 0.188 70.08);
-  --chart-4: oklch(0.627 0.265 303.9);
-  --chart-5: oklch(0.645 0.246 16.439);
-  --sidebar: oklch(0.208 0.042 265.755);
-  --sidebar-foreground: oklch(0.984 0.003 247.858);
-  --sidebar-primary: oklch(0.488 0.243 264.376);
-  --sidebar-primary-foreground: oklch(0.984 0.003 247.858);
-  --sidebar-accent: oklch(0.279 0.041 260.031);
-  --sidebar-accent-foreground: oklch(0.984 0.003 247.858);
-  --sidebar-border: oklch(0.279 0.041 260.031);
-  --sidebar-ring: oklch(0.446 0.043 257.281);
+  --animate-accordion-down: accordion-down 0.2s ease-out;
+  --animate-accordion-up: accordion-up 0.2s ease-out;
 }
 
 @layer base {
@@ -121,3 +129,7 @@
     @apply bg-background text-foreground;
   }
 }
+
+/* Application style defaults */
+/* @layer default {
+} */
